# mxcwpp

./: .dockerignore  .gitignore  .golangci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Makefile  README.md  README_ZH.md  SECURITY.md  TODOLIST-FIX.md  go.mod  go.sum
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
api/proto/: .gitkeep  README.md  bridge.proto  grpc.proto
cmd/agent/: main.go
configs/: agent.yaml.example  agentcenter.yaml  consumer.yaml  engine.example.yaml  engine.yaml  llmproxy.example.yaml  llmproxy.yaml  manager.yaml  server.yaml.example  vulnsync.example.yaml  vulnsync.yaml
configs/air/: agent.toml  (+4 more)
deploy/: .env.example  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.pret.yml  docker-compose.v2.yml  docker-compose.yml  env.v2.example  init-clickhouse.sql  init.sql
docs/: api-reference.md  architecture.md  cluster-image-scan-design.md  code-style.md  configuration.md  contributing.md  datatype-allocation.md  deploy-v2.4.0.md  deployment.md  dr-runbook.md  edr-engine-design.md  edr-performance-tuning.md  faq.md  gke-audit-detection.md  gke-onboarding.md  governance.md  image-scan-extension-design.md  multi-tenant-rollout.md  p2-5-plugin-ipc-evaluation.md  p3-detailed-evaluation.md  p3-k-dpdk-cloud-server-reeval.md  perf-scale-architecture.md  rasp-java-design.md  refactor-plan-A7-A8-A9.md  roadmap.md  security-remediation-plan.md  systems-catalog.md  ui-design-system.md  v2-final-progress.md  v2-todo-progress.md  v2-todo.md  v2-ui-deep-pages-audit-report.md  v2-ui-full-pages-audit-report.md  vuln-module-design.md  vuln-scanner-deep-eval.md  vulnsync-migration.md  xinchuang-os-matrix.md
plugins/rasp-python/: pyproject.toml
plugins/rasp-python/mxcwpp_rasp_py/: __init__.py  agent.py  event.py  reporter.py
plugins/rasp-python/mxsec_rasp_py/: __init__.py  agent.py  reporter.py
scripts/: add_tenant_id_to_models.py  add_tenant_id_to_test_sqls.py  build-agent-hardened.sh  build-agent.sh  build-images.sh  build.sh  cleanup-dep-scanner-data.sql  cleanup-jar-disk-scan-data.sql  cleanup-node-zombie-data.sql  cleanup-proc-scanner-data.sql  cleanup-python-zombie-data.sql  cleanup-service-alerts.sql  dev-docker-start.sh  dev-start.sh  diagnose-hosts.sh  download-scanner-deps.sh  generate-certs.sh  generate-proto.sh  init-db.sh  install.sh  migration-software-scope-fields.sql  package-agent.sh  package-deploy.sh  package-server.sh  pret-docker-start.sh  uninstall.sh
sdk/python/: pyproject.toml
sdk/python/mxcwpp/: __init__.py  client.py  models.py
sdk/python/mxsec/: __init__.py  client.py  models.py
ui/: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
web/: .gitignore  DESIGN.md  README.md  next.config.ts  package.json  playwright.config.ts
(+1405 files in other folders)
