[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mxcwpp-rasp-py"
version = "0.1.0"
description = "mxcwpp Python RASP — PEP 578 audit hook based runtime application self-protection"
authors = [{name = "mxcwpp dev", email = "dev@mxcwpp.local"}]
license = {text = "Proprietary"}
requires-python = ">=3.8"
keywords = ["security", "rasp", "audit", "mxcwpp"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mxcwpp_rasp_py*"]
