[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mxsec-sdk"
version = "0.1.0"
description = "mxsec platform official Python SDK"
authors = [{name = "mxsec dev", email = "dev@mxsec.local"}]
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mxsec*"]
